public/css/style.css
body{
    background-color: #f5f5f5;
    color: black;
}
body.dark-theme {
    background-color: #202945;
    color: white;
}
.card.dark-theme {
    background-color: #202945;
    color: white;
}
header{
  background-color: #f5f5f5;
}
header.dark-theme {
    background-color: #464e69;
    color: white;
}

a{
    color: black;
    text-decoration: underline;
    text-underline-offset: none;
}
a.dark-theme {
  color: white;
}
#light-btn {
  color: white;
}
#dark-btn {
  color: black;
}
blockquote {
    border-left: 5px solid #ccc;
    padding: 1em 1em 1em 2em;
    margin: 1em 0;
}
.emoji{
    margin: 0.3em 0.4em;
    text-align: center;
}
.emoji::after {
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}
.anim::after {
    content: '✋';
    --emoji-1: '👋';
    --emoji-2: '👍';
    animation-name: frames;
    animation-duration: 2s;
}
.nav-up {
    margin-top: -400px !important;
}
@keyframes frames {
    33.333% {
        content: var(--emoji-1);
    }

    66.666% {
        content: var(--emoji-2);
    }
}
/* mobile */
@media only screen and (min-width: 321px) {
    main{
        margin-top: 180px;
    }
}
/* desktop */
@media only screen and (min-width: 768px) {
    .nav-kiri{
        margin-left: 25px;
    }
    .nav-kanan{
        margin-right: 25px;
    }
    main{
        margin-top: 80px;
    }
    .sidebar{
        top: 80px;
    }
}


/* copy button highlight js */
.highlight-wrapper {
    display: block;
  }
  
  .highlight {
    position: relative;
    z-index: 0;
    padding: 0;
    margin: 0;
    border-radius: 4px;
  }
  
  .type-code-button {
    position: absolute;
    z-index: 2;
    right: 0;
    top: 0;
    font-size: 10px;
    font-weight: 700;
    line-height: 14px;
    width: 65px;
    color: #232326;
    background-color: #7f7f7f;
    border: 1.25px solid #7f7f7f;
    border-bottom-left-radius: 50px;
    white-space: nowrap;
    padding: 4px 4px 5px 4px;
    margin: 0 0 0 1px;
    cursor: pointer;
    opacity: 0.6;
  }

  .line-divider {
    margin-top: 10px;
    font: 150% "Open Sans", Arial, sans-serif;
    color: #999;
    text-align: center;
    position: relative;
    margin-bottom: 60px;
}

.line-divider:before {
    content: "";
    display: block;
    border-top: solid 2px #999;
    width: 100%;
    height: 2px;
    position: absolute;
    top: 17px;
    z-index: 1;
}

.line-divider .span-line-divider {
    background: #f5f5f5;
    padding: 0 20px;
    position: relative;
    z-index: 5;
}

table {
    text-align: left;
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
    display: block;
    overflow: scroll;
}

::-webkit-scrollbar {
    height: 10px;
    width: 4px;
    display: block;
    border-bottom: 1px solid rgba(255, 255, 255, 0.164);
  }
  ::-webkit-scrollbar-thumb:hover {
    background:rgba(255, 255, 255, 0.164); 
  }
  
  .fakeMenu {
    width: 350px;
    box-sizing: border-box;
    height: 25px;
    background-color: #bbb;
    margin: 0 auto;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
  }
  
  .fakeScreen {
    background-color: #151515;
    box-sizing: border-box;
    width: 350px;
    margin: 0 auto;
    padding: 20px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
  }
  
  p.line1 {
    position: relative;
    left: 50%;
    margin-left: -8.5em;
    text-align: left;
    font-size: 1.25em;
    font-family: monospace;
    white-space: nowrap;
    overflow: hidden;
    overflow-x: auto;
    width: 0;
  }
  p.terminalSukses {
    position: relative;
    left: 50%;
    margin-left: -8.5em;
    text-align: left;
    font-size: 1.25em;
    font-family: monospace;
    white-space: nowrap;
    overflow: hidden;
    overflow-x: auto;
    width: 0;
  }
  p.terminalErorr {
    position: relative;
    left: 50%;
    margin-left: -8.5em;
    text-align: left;
    font-size: 1.25em;
    font-family: monospace;
    white-space: nowrap;
    overflow: hidden;
    overflow-x: auto;
    width: 0;
  }
  p.line4 {
    position: relative;
    left: 50%;
    margin-left: -8.5em;
    text-align: left;
    font-size: 1.25em;
    font-family: monospace;
    white-space: nowrap;
    overflow: hidden;
    width: 0;
  }
  
  span {
    color: #fff;
    font-weight: bold;
  }
  
  .line1 {
    color: #fdfdfd;
    -webkit-animation: type .5s 1s steps(20, end) forwards;
    -moz-animation: type .5s 1s steps(20, end) forwards;
    -o-animation: type .5s 1s steps(20, end) forwards;
    animation: type .5s 1s steps(20, end) forwards;
  }
  
  .cursor1 {
    -webkit-animation: blink 1s 2s 2 forwards;
    -moz-animation: blink 1s 2s 2 forwards;
    -o-animation: blink 1s 2s 2 forwards;
    animation: blink 1s 2s 2 forwards;
  }
  
  .terminalSukses {
    color: #CDEE69;
    -webkit-animation: type .5s 4.25s steps(20, end) forwards;
    -moz-animation: type .5s 4.25s steps(20, end) forwards;
    -o-animation: type .5s 4.25s steps(20, end) forwards;
    animation: type .5s 4.25s steps(20, end) forwards;
  }
  
  .cursor2 {
    -webkit-animation: blink 1s 5.25s 2 forwards;
    -moz-animation: blink 1s 5.25s 2 forwards;
    -o-animation: blink 1s 5.25s 2 forwards;
    animation: blink 1s 5.25s 2 forwards;
  }
  
  .terminalErorr {
    color: #E09690;
    -webkit-animation: type .5s 7.5s steps(20, end) forwards;
    -moz-animation: type .5s 7.5s steps(20, end) forwards;
    -o-animation: type .5s 7.5s steps(20, end) forwards;
    animation: type .5s 7.5s steps(20, end) forwards;
  }
  
  .cursor3 {
    -webkit-animation: blink 1s 8.5s 2 forwards;
    -moz-animation: blink 1s 8.5s 2 forwards;
    -o-animation: blink 1s 8.5s 2 forwards;
    animation: blink 1s 8.5s 2 forwards;
  }
  
  .line4 {
    color: #fff;
    -webkit-animation: type .5s 10.75s steps(20, end) forwards;
    -moz-animation: type .5s 10.75s steps(20, end) forwards;
    -o-animation: type .5s 10.75s steps(20, end) forwards;
    animation: type .5s 10.75s steps(20, end) forwards;
  }
  
  .cursor4 {
    -webkit-animation: blink 1s 11.5s infinite;
    -moz-animation: blink 1s 8.5s infinite;
    -o-animation: blink 1s 8.5s infinite;
    animation: blink 1s 8.5s infinite;
  }
  
  @-webkit-keyframes blink {
    0% {
      opacity: 0;
    }
    40% {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
    90% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
  
  @-moz-keyframes blink {
    0% {
      opacity: 0;
    }
    40% {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
    90% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
  
  @-o-keyframes blink {
    0% {
      opacity: 0;
    }
    40% {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
    90% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
  
  @keyframes blink {
    0% {
      opacity: 0;
    }
    40% {
      opacity: 0;
    }
    50% {
      opacity: 1;
    }
    90% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
  
  @-webkit-keyframes type {
    to {
      width: 17em;
    }
  }
  
  @-moz-keyframes type {
    to {
      width: 17em;
    }
  }
  
  @-o-keyframes type {
    to {
      width: 17em;
    }
  }
  
  @keyframes type {
    to {
      width: 17em;
    }
  }
  .terminal{
      display: none;
  }


/* Tree View */
.treeView {
  padding-top: 2em;
  padding-right: 0.1em;
  padding-bottom: 3em;
  overflow: auto;
  white-space: nowrap;
  color: black;
}
.treeView span {
  display: inline-flex;
  vertical-align: middle;
  padding-left: 0.3em;
  font-size: 1.1rem;
  color: black;
}
.treeView i {
  display: inline-flex;
  vertical-align: middle;
}

/* File */
.file {
  position: relative;
  display: block;
  cursor: pointer;
}

.file:hover {
  background-color: #ccc;
}

/* Folder */
.folder {
  display: block;
}
.folder-header {
  position: relative;
  cursor: pointer;
  /* z-index: 999; */
}

.folder-header:hover {
  background-color: #ccc;
}
.folder > ul {
  padding-left: 1em;
  margin: 0;
}

